[package]
name = "rasl"
version = "0.1.0"
edition = "2024"

[features]
rhai = ["dep:rhai"]
lua = ["dep:mlua"]
python = ["dep:pyo3"]
csharp = ["dep:wrapped_mono"]

[dependencies]
lazy_static = "1.5.0"
mlua = { version = "0.10.4", optional = true, features = ["lua54", "vendored", "macros"] }
rhai = { version = "1.21.0", optional = true, features = ["metadata"] }
pyo3 = { version = "0.24.2", optional = true }
wrapped_mono = { path = "crates/wrapped_mono/", version = "0.4.0", optional = true }

[build-dependencies]
bindgen = "0.71.1"
